--- a/frontend/gifting-frontend/src/app/features/counter/counter.component.html
+++ b/frontend/gifting-frontend/src/app/features/counter/counter.component.html
@@ -1,1 +1,20 @@
-<p>counter works!</p>
+<h2>Redux Counter</h2>
+
+ 
+
+<div class="row">
+<div class="col-2">
+<ul class="nav nav-pills flex-column">
+<li class="nav-item">
+<a class="nav-link" routerLink="count" [routerLinkActive]="['active']">Counter</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" routerLink="prefs" [routerLinkActive]="['active']">User Preferences</a>
+    </li>
+    
+</ul>
+</div>
+<div class="col">
+<router-outlet></router-outlet>
+</div>
+</div>
